fixed picture overflow

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
     box-sizing: border-box;
     display: none;
     position: absolute;
+    overflow-y: auto;
     width: 90%;
     height: 90%;
     left: 5%;
